--- a/views/home.ejs
+++ b/views/home.ejs
@@ -59,24 +59,24 @@
     <h3>TITLE</h3>
   </div>
 
-
-<div class="row2">
-  <div class="column">
-    <img src="images/home4.png" alt="Snow" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="images/home3.png" alt="Forest" style="width:100%">
-  </div>
-</div>
 <div class="row2">
   <div class="column">
     <img src="images/home5.png" alt="Snow" style="width:100%">
   </div>
   <div class="column">
-    <img src="images/home4.png" alt="Forest" style="width:100%;">
+    <img src="images/homex.jpeg" alt="Forest" style="width:100%;">
   </div>
 
 </div>
+<div class="row2">
+  <div class="column">
+    <img src="images/home3.png" alt="Forest" style="width:100%">
+  </div>
+  <div class="column">
+    <img src="images/home4.png" alt="Snow" style="width:100%">
+  </div>
+</div>
+
 
 
 
@@ -85,7 +85,7 @@
 
 <div class="home-title fl-wrap">
   <!-- <div class="pr-bg pr-bg-white"></div> -->
-  <h3>TITLE</h3>
+  <h3>Collections</h3>
 </div>
 
 
@@ -98,63 +98,90 @@
                       ">
   <!-- gallery-item-->
   <div class="gallery-item " style="padding: 5px">
-    <h3 style="color: white;">project 1</h3>
-    <div class="grid-item-holder">
-      <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-        class="
-                                                                    fet_pr-carousel-box-media-zoom
-                                                                    popup-image
-                                                                  "><i class="fal fa-search"></i></a>
-      <img
-        src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-        alt="" />
-    </div>
+<a href="/munsiko">
+      <h3 class="sub-title" style="color: white;">Munsiko</h3>
+      <div class="grid-item-holder">
+        <a href="images/folio/sample/IMG_3219.JPG"
+          class="
+                                                                          fet_pr-carousel-box-media-zoom
+                                                                          popup-image
+                                                                        "><i class="fal fa-search"></i></a>
+<a href="/munsiko">
+        
+          <img
+            src="images/folio/sample/IMG_3219.JPG"
+            alt="" />
+            </a>
+      
+      
+      
+      </div>
+</a>
   </div>
   <!-- gallery-item end-->
   <!-- gallery-item-->
   <div class="gallery-item" style="padding: 5px">
-    <h3 style="color: white;">project 2</h3>
+    <a href="/mistakenfabricscollection">
+<h3 class="sub-title" style="color: white;">Mistaken Fabrics</h3>
 
-    <div class="grid-item-holder">
-      <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-        class="
+<div class="grid-item-holder">
+  <a href="images/folio/sample/mistaken fabrics/igcfashion-mistaken-fabrics-africa-fashion-slow-fashion-revolution.JPG"
+    class="
                                                                     fet_pr-carousel-box-media-zoom
                                                                     popup-image
                                                                   "><i class="fal fa-search"></i></a>
-      <img
-        src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-        alt="" />
-    </div>
+    <a href="/mistakenfabricscollection">
+
+  <img
+    src="images/folio/sample/mistaken fabrics/igcfashion-mistaken-fabrics-africa-fashion-slow-fashion-revolution.JPG"
+    alt="" />
+    </a>
+</div>
+    </a>
+   
   </div>
   <!-- gallery-item end-->
   <!-- gallery-item-->
   <div class="gallery-item" style="padding: 5px">
-    <h3 style="color: white;">project 3</h3>
+    <a href="/aw19">
+<h3 class="sub-title" style="color: white;">AW19</h3>
 
-    <div class="grid-item-holder">
-      <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-        class="
+<div class="grid-item-holder">
+  <a href="images/folio/sample/AW19/aw2.jpg"
+    class="
                                                                   fet_pr-carousel-box-media-zoom
                                                                   popup-image
                                                                 "><i class="fal fa-search"></i></a>
-      <img
-        src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-        alt="" />
-    </div>
+    <a href="/aw19">
+
+  <img
+    src="images/folio/sample/AW19/aw2.jpg"
+    alt="" />
+    </a>
+</div>
+    </a>
+   
+    
   </div>
   <div class="gallery-item">
-    <h3 style="color: white">project 4</h3>
-
-    <div class="grid-item-holder">
-      <a href="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-        class="
-                                                                    fet_pr-carousel-box-media-zoom
-                                                                    popup-image
-                                                                  "><i class="fal fa-search"></i></a>
-      <img
-        src="images/folio/sample/mistaken fabrics/igc-fashion-mistaken-fabrics-sustainable-fashion-campaign-photo-shoot.JPG"
-        alt="" />
-    </div>
+    <a href="/kampaladisasters">
+  <h3 class="sub-title" style="color: white">Kampala Disaster</h3>
+  
+  <div class="grid-item-holder">
+    <a href="images/folio/sample/KAMPALA DISASTERS/kampala2.JPG"
+      class="
+                                                                      fet_pr-carousel-box-media-zoom
+                                                                      popup-image
+                                                                    "><i class="fal fa-search"></i></a>
+    <a href="/kampaladisasters">
+  
+    <img
+      src="images/folio/sample/KAMPALA DISASTERS/kampala2.JPG"
+      alt="" />
+      </a>
+  </div>
+    </a>
+  
   </div>
 
 
