--- a/views/munsiko.ejs
+++ b/views/munsiko.ejs
@@ -6,7 +6,7 @@
         </div>
         <div class="hero-bg">
             <div class="bg par-elem"
-                  data-bg="images/bg/png.png"
+                  data-bg="images/folio/sample/IMG_3219.JPG"
                   data-scrollax="properties: { translateY: '30%' }">
             </div>
 
@@ -59,7 +59,16 @@
                                     <!-- gallery-item-->
                                     <div class="gallery-item">
                                         <div class="grid-item-holder">
-                                            <a href="images/folio/sample/img1.JPG" class="
+                                            <a href="images/folio/sample/IMG_3219.JPG" class="
+                                                                                                        fet_pr-carousel-box-media-zoom
+                                                                                                        popup-image
+                                                                                                      "><i class="fal fa-search"></i></a>
+                                            <img src="images/folio/sample/IMG_3219.JPG" alt="" />
+                                        </div>
+                                    </div>
+                                    <div class="gallery-item">
+                                        <div class="grid-item-holder">
+                                            <a href="images/folio/sample/IMG_3269.JPG" class="
                                                                     fet_pr-carousel-box-media-zoom
                                                                     popup-image
                                                                   "><i class="fal fa-search"></i></a>
@@ -70,7 +79,7 @@
                                     <!-- gallery-item-->
                                     <div class="gallery-item gallery-item-second">
                                         <div class="grid-item-holder">
-                                            <a href="images/folio/sample/IMG_3200.PNG" class="
+                                            <a href="images/folio/sample/IMG_3206.JPG" class="
                                                                     fet_pr-carousel-box-media-zoom
                                                                     popup-image
                                                                   "><i class="fal fa-search"></i></a>
@@ -81,7 +90,7 @@
                                     <!-- gallery-item-->
                                     <div class="gallery-item">
                                         <div class="grid-item-holder">
-                                            <a href="images/folio/sample/IMG_3219.JPG" class="
+                                            <a href="images/folio/sample/img1.JPG" class="
                                                                     fet_pr-carousel-box-media-zoom
                                                                     popup-image
                                                                   "><i class="fal fa-search"></i></a>
@@ -155,8 +164,7 @@
             <!-- det-wrap end-->
         </div>
         <!-- container end -->
-        <div class="clearfix"></div>
-        <div class="limit-box fl-wrap"></div>
     
     </section>
 </div>
+
