removed a on imgs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -101,11 +101,11 @@
 <a href="/munsiko">
       <h3 class="sub-title" style="color: white;">Munsiko</h3>
       <div class="grid-item-holder">
-        <a href="images/folio/sample/IMG_3219.JPG"
+        <!-- <a href="images/folio/sample/IMG_3219.JPG"
           class="
                                                                           fet_pr-carousel-box-media-zoom
                                                                           popup-image
-                                                                        "><i class="fal fa-search"></i></a>
+                                                                        "><i class="fal fa-search"></i></a> -->
 <a href="/munsiko">
         
           <img
@@ -125,12 +125,12 @@
 <h3 class="sub-title" style="color: white;">Mistaken Fabrics</h3>
 
 <div class="grid-item-holder">
-  <a href="images/folio/sample/mistaken fabrics/igcfashion-mistaken-fabrics-africa-fashion-slow-fashion-revolution.JPG"
+  <!-- <a href="images/folio/sample/mistaken fabrics/igcfashion-mistaken-fabrics-africa-fashion-slow-fashion-revolution.JPG"
     class="
                                                                     fet_pr-carousel-box-media-zoom
                                                                     popup-image
                                                                   "><i class="fal fa-search"></i></a>
-    <a href="/mistakenfabricscollection">
+    <a href="/mistakenfabricscollection"> -->
 
   <img
     src="images/folio/sample/mistaken fabrics/igcfashion-mistaken-fabrics-africa-fashion-slow-fashion-revolution.JPG"
@@ -147,11 +147,11 @@
 <h3 class="sub-title" style="color: white;">AW19</h3>
 
 <div class="grid-item-holder">
-  <a href="images/folio/sample/AW19/aw2.jpg"
+  <!-- <a href="images/folio/sample/AW19/aw2.jpg"
     class="
                                                                   fet_pr-carousel-box-media-zoom
                                                                   popup-image
-                                                                "><i class="fal fa-search"></i></a>
+                                                                "><i class="fal fa-search"></i></a> -->
     <a href="/aw19">
 
   <img
@@ -168,11 +168,11 @@
   <h3 class="sub-title" style="color: white">Kampala Disaster</h3>
   
   <div class="grid-item-holder">
-    <a href="images/folio/sample/KAMPALA DISASTERS/kampala2.JPG"
+    <!-- <a href="images/folio/sample/KAMPALA DISASTERS/kampala2.JPG"
       class="
                                                                       fet_pr-carousel-box-media-zoom
                                                                       popup-image
-                                                                    "><i class="fal fa-search"></i></a>
+                                                                    "><i class="fal fa-search"></i></a> -->
     <a href="/kampaladisasters">
   
     <img
