--- a/views/home.ejs
+++ b/views/home.ejs
@@ -56,7 +56,7 @@
 
   <div class="home-title fl-wrap">
     <!-- <div class="pr-bg pr-bg-white"></div> -->
-    <h3>TITLE</h3>
+    <h3>Culture & Fashion</h3>
   </div>
 
 <div class="row2">
