--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -1,157 +1,111 @@
 <div class="content">
     <!--fixed-column-wrap-->
-    <div class="fixed-column-wrap">
-        <div class="pr-bg"></div>
-        <!--fixed-column-wrap-content-->
-        <div class="fixed-column-wrap-content">
-            <!-- <div class="scroll-nav-wrap color-bg">
-                <div class="carnival">Scroll down</div>
-                <div class="snw-dec">
-                    <div class="mousey">
-                        <div class="scroller"></div>
-                    </div>
-                </div>
-            </div> -->
-            <div class="bg" data-bg="images/bg/about.jpg"></div>
-           
-            <div class="progress-bar-wrap bot-element">
-                <div class="progress-bar"></div>
-            </div>
-            <!--fixed-column-wrap_title-->
-            <div class="fixed-column-wrap_title first-tile_load">
-                <h2>IGC<br>FASHION</h2>
-               
-            </div>
-            <!--fixed-column-wrap_title end-->
-            <div class="fixed-column-dec"></div>
-        </div>
-        <!--fixed-column-wrap-content end-->
-    </div>
+
     <!--fixed-column-wrap end-->
-    <!--column-wrap--> 
-    <div class="column-wrap dark-bg">
-        <!--column-wrap-container -->   
-        <div class="column-wrap-container fl-wrap">
+    <!--column-wrap-->
+    <div class="dark-bg">
+        <!--column-wrap-container -->
+        <div class="fl-wrap">
             <div class="col-wc_dec">
                 <div class="pr-bg pr-bg-white"></div>
             </div>
             <div class="col-wc_dec col-wc_dec2">
                 <div class="pr-bg pr-bg-white"></div>
             </div>
-            <!--section--> 
+            <!--section-->
             <section id="sec1" class="small-padding dark-bg">
                 <div class="container">
-                    <!-- <div class="column-wrap-media fl-wrap">
-                            <div class="pr-bg pr-bg-white"></div>
-                            <a href="membership.html" class="column-wrap-media_btn color-bg ">
-                                 Membership </a>
-                                <div class="pr-bg pr-bg-white"></div>
-                            </a>
-                            
-                     </div> -->
-                    <div class="split-sceen-content_title fl-wrap">
+
+                    <div class="fl-wrap">
                         <div class="pr-bg pr-bg-white"></div>
-                        <h3> Our story</h3>
-                        <p>IGC FASHION (Ibrahim and Godfrey’s community fashion)
+                        <h3 class="home-title" style=" font-size: 26px;text-align: center;
+text-transform: uppercase;
+  color: #f76905;;
+  font-weight: 900;
+  width: 100%;
+  letter-spacing: 2px;
+  line-height: 34px;
+  font-family: 'Oswald', sans-serif;
+  padding-top: 2px;"> Our story</h3>
+                        <p >IGC FASHION (Ibrahim and Godfrey’s community fashion)
                             was found in 2017 by two uganda fashion designers Kasoma Ibrahim & Katende Godfrey.
-                      We are a fashion and costume label from kampala uganda inspired by African heritage, nature and culture always paired with a forward thinking and a unique design aesthetic.
+                            We are a fashion and costume label from kampala uganda inspired by African heritage, nature
+                            and culture always paired with a forward thinking and a unique design aesthetic.
 
-                            We tend to look at a garment as a moving breathing piece of sculpture art which can be used as a vehicle for communicating and questioning ideas about our cultures.</p>
+                            We tend to look at a garment as a moving breathing piece of sculpture art which can be used
+                            as a vehicle for communicating and questioning ideas about our cultures.
+                            We are partially interested in using raw materials like bark cloth, raffia, sisal, shells
+                            and other neglected fabric
+                            items that can be combiner and transformed into a unique garment. As designers we find it
+                            more important to
+                            recognize craftsmanship and sustainability
+                            and this contribution is something we always seek to incorporate into our work through
+                            reclying, sourcing from
+                            diverse African cultures and a zero waste initiative.
+                        </p>
 
-                        </div>
-                    <!-- <div class="column-wrap-content fl-wrap">
-                        <div class="column-wrap-media fl-wrap">
-                            <div class="pr-bg pr-bg-white"></div>
-                            <img src="images/all/video-pic.jpg"  class="respimg" alt="">
-                            <a href="https://youtu.be/NwvpEVZh2Qo" class="column-wrap-media_btn color-bg image-popup">
-                                 Image Book Download<i class="fas fa-play"></i>
-                                <div class="pr-bg pr-bg-white"></div>
-                            </a>
-                            
-                    </div> -->
-                        <div class="column-wrap-text">
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <h3 class="pr-subtitle">
-                                        We are a Design Community in Africa
-                                        <div class="pr-bg pr-bg-white"></div>
-                                    </h3>
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="pr-bg pr-bg-white"></div>
-                                    <p> We are partially interested in using raw materials like bark cloth, raffia, sisal, shells and other neglected fabric items that can be combiner and transformed into a unique garment. As designers we find it more important to recognize craftsmanship and sustainability 
-                                        and this contribution is something we always seek to incorporate into our work through reclying, sourcing from diverse African cultures and a zero waste initiative.</p>
-                                </div>
-                            </div>
-                        </div>
+                        <p >
+                            Since the beginning of their work IGC Fashion
+                            organised different Community Cyphers and Workshops,
+                            whereby the Designers taught the Community (children and
+                            adults) how to tailor, design and create. This project is
+                            a platform for the children, youth, and young mothers'
+                            hidden potential as it involves an all-around arts
+                            display, not only fashion but also dance, rap, painting,
+                            singing, modeling IGC wants to awaken the youths’ desire
+                            to try themselves out and strengthen their
+                            self-confidence. The goals of the event are to inspire and
+                            motivate the youths, to build hope and create unity and
+                            love between individuals. By sharing skills in fashion and
+                            other arts IGC aims to fight unemployment by preventing
+                            youth from being idle and making them discover ways to be
+                            creative to gain their own income. The Fashion Cypher is a
+                            significant occasion which is essential for IGC’s goal to
+                            use fashion for social change. Today the Fashion Label
+                            works in many different areas like Kampala (Kazo,
+                            Kawempe), Kisoro, Kasese, Kitigum and grows more every
+                            day.
+                        </p>
+
+                        <p>
+                            IGC Fashion supports the young adults to improve on
+                            their skills and develop them. Therefore the Fashion
+                            label started an Intern Program whereby young adults can
+                            apply to learn from IGC and create their own business.
+                            Still many people are not capable of paying the school
+                            fees or materials which are needed for their Internship.
+                        </p>
+
+                        <p>
+                            IGC’s biggest goal is to build their own art school,
+                            where people can learn different skills in Art. Uganda
+                            is a country of expression, expression through art,
+                            therefore IGC wants to support the community with
+                            education, the artists with a school and connections and
+                            the youths with building opportunities. Be part of our
+                            school
+                        </p>
+
                     </div>
 
-                     <div class="row">
-                       
-                        <div class="column">
-                            <!-- <h1 class="pr-subtitle">
-                                OUR TEAM
-                                <div class="pr-bg pr-bg-white"></div>
-                            </h1> -->
-                          <div class="card">
-                            <img src="images/team/ibrah.png" alt="Jane" style="width:100%">
-                            <div class="container">
-                                <!-- <br> -->
-                              <h1>Ak Ibrahim</h1>
-                              <p class="title">Art Director &amp; Co Founder</p>
-                              
-                              <p>info@igcfashion.co</p>
-                              <p><button class="button">Contact</button></p>
-                            </div>
-                          </div>
-                        </div>
-                      
-                        <div class="column">
-                          <div class="card">
-                            <img src="images/team/godfery.png" alt="Mike" style="width:100%">
-                            <div class="container">
-                                <!-- <br> -->
-                              <h1>Katende Godfrey</h1>
-                              <p class="title">CEO &amp; Founder</p>
-                            
-                              <p>info@igcfashion.co</p>
-                              <p><button class="button">Contact</button></p>
-                            </div>
-                          </div>
-                        </div>
-                      
-                        <div class="column">
-                          <div class="card">
-                            <img src="images/team/kiki.jpg" alt="John" style="width:100%">
-                            <div class="container">
-                                <!-- <br> -->
-                                <h1><b>KATENDE KIKI </h1></b>
-                              <p class="title">Manager</p>
-                             
-                              <p>info@igcfashion.co</p>
-                              <p><button class="button">Contact</button></p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    <div class="section-number right_sn">
-                        <div class="pr-bg pr-bg-white"></div>
-                        <span>0</span>1.
-                    </div>
+
+
+
+
                 </div>
             </section>
-            <!--section end--> 
+            <!--section end-->
             <!-- <div class="section-separator"></div> -->
-            <!--section --> 
-            
-            <!--section end--> 
+            <!--section -->
+
+            <!--section end-->
             <!-- <div class="section-separator"></div> -->
-            <!--section--> 
-    
-            <!--section end-->         
+            <!--section-->
+
+            <!--section end-->
         </div>
-        <!--column-wrap-container end-->         
+        <!--column-wrap-container end-->
     </div>
-    <!--column-wrap end--> 
+    <!--column-wrap end-->
     <div class="limit-box fl-wrap"></div>
 </div>
